--- a/functions.ipynb
+++ b/functions.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import urllib.parse as ulp"
+    "import urllib.parse as ulp\n",
+    "import params"
    ]
   },
   {
@@ -16,10 +17,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Local Variables\n",
     "fetchSize = 100 # How many records to retrieve at once from the API\n",
     "offset = 0\n",
     "queryPt1 = 'sys_updated_on>javascript:gs.dateGenerate('\n",
     "queyrPt2 = ')^ORDERBYsys_updated_on'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global Variables\n",
+    "baseURL = params.baseURL"
    ]
   },
   {
@@ -38,7 +50,7 @@
    "outputs": [],
    "source": [
     "qStr = {'sysparm_exclude_reference_link' : 'true',\n",
-    "        'sysparm_query' : 0\n",
+    "        'sysparm_query' : 0,\n",
     "        'sysparm_limit' : fetchSize, \n",
     "        'sysparm_offset': offset}"
    ]
